--- a/insightserenity/views/clients/profile.ejs
+++ b/insightserenity/views/clients/profile.ejs
@@ -1,117 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Data-Forage Consultation</title>
-
-    <!-- Favicons -->
-    <link href="/insightserenity/public/lib/img/favicon.png" rel="icon">
-    <link href="/insightserenity/public/lib/img/apple-touch-icon.png" rel="apple-touch-icon">
-
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
-    <!-- Vendor CSS Files -->
-    <link href="/insightserenity/public/lib/vendor/aos/aos.css" rel="stylesheet">
-    <link href="/insightserenity/public/lib/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/insightserenity/public/lib/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="/insightserenity/public/lib/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="/insightserenity/public/lib/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="/insightserenity/public/lib/vendor/remixicon/remixicon.css" rel="stylesheet">
-    <link href="/insightserenity/public/lib/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-    <!-- Template Main CSS File -->
-    <link href="/insightserenity/public/css/style.css" rel="stylesheet">
-    <style>
-      .profile-container {
-          margin-top: 50px;
-      }
-      .profile-header {
-          margin-bottom: 30px;
-      }
-      .profile-picture {
-          background-size: cover;
-          min-height: 400px;
-      }
-      .profile-info {
-          margin-bottom: 30px;
-      }
-      .rating span {
-          color: gold;
-          font-size: 1.5em;
-      }
-      a {
-          color: black;
-      }
-      a:hover {
-          color: #005582;
-      }
-      .table-responsive {
-          margin-top: 20px;
-      }
-    </style>
-</head>
-<body class="d-flex flex-column vh-100">
-  <header id="header" class="fixed-top bg-black">
-    <div class="container d-flex align-items-center justify-content-lg-between">
-        <h1 class="logo me-auto me-lg-0"><a href="/insightserenity/">Insightserenity<span>.</span></a></h1>
-        <nav id="navbar" class="navbar order-last order-lg-0">
-            <ul>
-                <li><a class="nav-link scrollto active" href="/insightserenity/">Home</a></li>
-                <li><a class="nav-link scrollto" href="/insightserenity/about">About</a></li>
-                <li><a class="nav-link scrollto" href="/insightserenity/service">Services</a></li>
-                <li><a class="nav-link scrollto" href="/insightserenity/portfolio">Portfolio</a></li>
-                <li><a class="nav-link scrollto" href="/insightserenity/team">Team</a></li>
-                <li><a class="nav-link scrollto" href="/insightserenity/contact">Contact</a></li>
-                <% if (currentUser) { %>
-                    <% if (currentUser.role === 'consultant') { %>
-                        <li><a href="/insightserenity/consultant/" class="nav-link scrollto">Consultant Profile</a></li>
-                        <li class="dropdown"><a href="#"><span>Welcome to DF, <%= currentUser.firstname %></span> <i class="bi bi-chevron-down"></i></a>
-                            <ul>
-                                <li><a href="#">Profile</a></li>
-                                <li class="dropdown"><a href="#"><span>Help & Support</span> <i class="bi bi-chevron-right"></i></a>
-                                    <ul>
-                                        <li><a href="#">Help Center</a></li>
-                                        <li><a href="#">Support Inbox</a></li>
-                                        <li><a href="#">Report a problem</a></li>
-                                        <li><a href="#">Terms & Policies</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">Settings & Privacy</a></li>
-                                <li><a href="/insightserenity/user/logout" class="text-danger">Logout</a></li>
-                            </ul>
-                        </li>
-                    <% } else if (currentUser.role === 'client') { %>
-                        <li><a href="/insightserenity/client/" class="nav-link scrollto">Client Profile</a></li>
-                        <li class="dropdown"><a href="#"><span>Welcome to DF, <%= currentUser.firstname %></span> <i class="bi bi-chevron-down"></i></a>
-                            <ul>
-                                <li><a href="#">Profile</a></li>
-                                <li class="dropdown"><a href="#"><span>Help & Support</span> <i class="bi bi-chevron-right"></i></a>
-                                    <ul>
-                                        <li><a href="#">Help Center</a></li>
-                                        <li><a href="#">Support Inbox</a></li>
-                                        <li><a href="#">Report a problem</a></li>
-                                        <li><a href="#">Terms & Policies</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">Settings & Privacy</a></li>
-                                <li><a href="/insightserenity/user/logout" class="text-danger">Logout</a></li>
-                            </ul>
-                        </li>
-                    <% } %>
-                <% } %>
-            </ul>
-            <i class="bi bi-list mobile-nav-toggle"></i>
-        </nav><!-- .navbar -->
-        <% if (!currentUser) { %>
-            <a href="/insightserenity/user/login" class="get-started-btn scrollto">Login</a>
-            <a href="/insightserenity/user/register" class="get-started-btn scrollto">Get Started</a>
-        <% } %>
-    </div>
-  </header>
+<% layout('layouts/boilerplate') %>
 
   <!-- Header Start -->
   <div class="container-fluid bg-black py-5 mb-5 page-header">
@@ -147,15 +34,15 @@
                                 <h5 class="card-title mb-0">Personal Information</h5>
                             </div>
                             <div class="card-body text-center">
-                                <img src="<%= client.userId.profilePicture %>" alt="Profile Picture" class="profile-picture img-fluid">
-                                <h5 class="card-title mt-3"><%= client.userId.firstname %> <%= client.userId.lastname %></h5>
-                                <p class="card-text"><%= client.userId.email %></p>
+                                <img src="<%= co.userId.profilePicture %>" alt="Profile Picture" class="profile-picture img-fluid">
+                                <h5 class="card-title mt-3"><%= co.userId.firstname %> <%= co.userId.lastname %></h5>
+                                <p class="card-text"><%= co.userId.email %></p>
                             </div>
                         </div>
                         <div class="mt-4">
-                        <% if (currentUser && currentUser._id.equals(client.userId._id)) { %>
+                        <% if (currentUser && currentUser._id.equals(co.userId._id)) { %>
                             <a href="/insightserenity/client/edit" class="btn btn-warning">Edit Profile</a>
-                            <form action="/insightserenity/client/<%= client._id %>?_method=DELETE" method="POST" class="d-inline">
+                            <form action="/insightserenity/user/<%= currentUser._id %>?_method=DELETE" method="POST" class="d-inline">
                                 <button type="submit" class="btn btn-danger">Delete</button>
                             </form>
                         <% } %>
@@ -175,31 +62,31 @@
                                     <tbody>
                                         <tr>
                                             <th scope="row">Company Name</th>
-                                            <td><%= client.companyName %></td>
+                                            <td><%= co.companyName %></td>
                                         </tr>
                                         <tr>
                                             <th scope="row">Industry</th>
-                                            <td><%= client.industry %></td>
+                                            <td><%= co.industry %></td>
                                         </tr>
                                         <tr>
                                             <th scope="row">Contact Person</th>
-                                            <td><%= client.contactPerson %></td>
+                                            <td><%= co.contactPerson %></td>
                                         </tr>
                                         <tr>
                                             <th scope="row">Address</th>
-                                            <td><%= client.address %></td>
+                                            <td><%= co.address %></td>
                                         </tr>
                                         <tr>
                                             <th scope="row">Website</th>
                                             <td>
                                                 <% 
-                                                let websiteUrl = client.website;
+                                                let websiteUrl = co.website;
                                                 // Check if the URL does not start with http:// or https://
                                                 if (!/^https?:\/\//i.test(websiteUrl)) {
                                                     websiteUrl = 'http://' + websiteUrl; // Default to http://
                                                 }
                                                 %>
-                                                <a href="<%= websiteUrl %>" target="_blank" rel="noopener noreferrer"><%= client.website %></a>
+                                                <a href="<%= websiteUrl %>" target="_blank" rel="noopener noreferrer"><%= co.website %></a>
                                             </td>
                                         </tr>
                                         <tr>
@@ -243,102 +130,5 @@
     </main>
     <!-- Main End -->
 
-
-
-    <!-- ======= Footer ======= -->
-        <footer id="footer">
-        <div class="footer-top">
-            <div class="container">
-                <div class="row">
-    
-                    <div class="col-lg-3 col-md-6">
-                        <div class="footer-info">
-                            <h3>InsightSerenity</h3>
-                            <p>
-                                Houston, TX <br>
-                                77036<br><br>
-                                <strong>Phone:</strong> <a href="tel:3463839529">346-383-9529</a><br>
-                                <strong>Email:</strong> <a href="mailto:emmanuel.ao@outlook.com">Emmanuel.ao@outlook.com</a><br>
-                            </p>
-                            <div class="social-links mt-3">
-                                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-    
-                    <div class="col-lg-2 col-md-6 footer-links">
-                        <h4>Useful Links</h4>
-                        <ul>
-                            <li><i class="bx bx-chevron-right"></i> <a href="/insightserenity">Home</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="/insightserenity/about">About us</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="/insightserenity/service/">Services</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="/insightserenity/terms">Terms of service</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="/insightserenity/privacy">Privacy policy</a></li>
-                        </ul>
-                    </div>
-    
-                    <div class="col-lg-3 col-md-6 footer-links">
-                    <h4>Our Services</h4>
-                    <ul>
-                        <% if (services && services.length > 0) { %>
-                            <% services.forEach(service => { %>
-                                <li><i class="bx bx-chevron-right"></i> <a href="/insightserenity/service/<%= service._id %>"><%= service.name %></a></li>
-                            <% }) %>
-                        <% } else { %>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">No services available</a></li>
-                        <% } %>
-                    </ul>
-                    </div>
-    
-                    <div class="col-lg-4 col-md-6 footer-newsletter">
-                        <h4>Our Newsletter</h4>
-                        <p>Stay updated with the latest insights and news from InsightSerenity. Subscribe to our newsletter.</p>
-                        <form action="" method="post">
-                            <input type="email" name="email"><input type="submit" value="Subscribe">
-                        </form>
-                    </div>
-    
-                </div>
-            </div>
-        </div>
-    
-        <div class="container">
-            <div class="copyright">
-                &copy; Copyright <strong><span>InsightSerenity</span></strong>. All Rights Reserved
-            </div>
-            <div class="credits">
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-            </div>
-        </div>
-        </footer>
-    <!-- End Footer -->
   
-</body>
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
-        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-        crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-
-<!-- Vendor JS Files -->
-<script src="/insightserenity/public/lib/vendor/purecounter/purecounter_vanilla.js"></script>
-<script src="/insightserenity/public/lib/vendor/aos/aos.js"></script>
-<script src="/insightserenity/public/lib/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="/insightserenity/public/lib/vendor/glightbox/js/glightbox.min.js"></script>
-<script src="/insightserenity/public/lib/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-<script src="/insightserenity/public/lib/vendor/swiper/swiper-bundle.min.js"></script>
-<script src="/insightserenity/public/lib/vendor/waypoints/noframework.waypoints.js"></script>
-<script src="/insightserenity/public/lib/vendor/php-email-form/validate.js"></script>
-
-<!-- Template Main JS File -->
-<script src="/insightserenity/public/lib/js/main.js"></script>
-</body>
-
-</html>
