--- a/insightserenity/views/partials/navbar.ejs
+++ b/insightserenity/views/partials/navbar.ejs
@@ -3,12 +3,11 @@
     <h1 class="logo me-auto me-lg-0"><a href="/insightserenity/">IS<span>.</span></a></h1>
     <nav id="navbar" class="navbar order-last order-lg-0">
       <ul>
-        <li><a class="nav-link scrollto active" href="/insightserenity/">Home</a></li>
-        <li><a class="nav-link scrollto" href="/insightserenity/about">About</a></li>
-        <li><a class="nav-link scrollto" href="/insightserenity/service/">Services</a></li>
-        <li><a class="nav-link scrollto" href="/insightserenity/portfolio">Portfolio</a></li>
-        <li><a class="nav-link scrollto" href="/insightserenity/team">Team</a></li>
-        <li><a class="nav-link scrollto" href="/insightserenity/contact">Contact</a></li>
+        <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+        <li><a class="nav-link scrollto" href="#about">About</a></li>
+        <li><a class="nav-link scrollto" href="#services">Services</a></li>
+        <li><a class="nav-link scrollto" href="#team">Team</a></li>
+        <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         <% if (currentUser) { %>
           <% if (currentUser.role === 'consultant') { %>
             <li><a href="/insightserenity/consultant/" class="nav-link scrollto">Consultant Profile</a></li>
